--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -6454,8 +6454,8 @@ button.downloadPDF:hover {
 }
 .attchOpen button {
     border-radius: 4px;
-    background-color: #DDF8F1;
-    color: #028B66;
+    background-color: #FFF7E6;
+    color: #C58904;
     font-family: Muli;
     font-size: 12px;
     font-weight: bold;
@@ -6467,7 +6467,7 @@ button.downloadPDF:hover {
 .attchOpen button label {
     height: 8px;
     width: 8px;
-    background-color: #1DD1A1;
+    background-color: #FECA57;
     border-radius: 12px;
     margin-right: 7px;
     margin-bottom: 0px;
