--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -12238,3 +12238,29 @@ input:-moz-autofill:active{
     background: transparent !important;
     -webkit-box-shadow: 0 0 0 30px white inset !important;
 } */
+
+
+/* Adding by Ankit */
+.modAppTabs {
+    background-color: #F2F2F2 !important;
+    box-shadow: initial !important;
+    margin-bottom: 15px;  
+}
+.modAppTabs button {
+    margin-left: 20px;
+    color: #7F8383 !important;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 12px;
+    font-family: Muli;
+    text-transform: capitalize;
+    width: initial !important;
+    margin-right: 26px;
+    min-height: 50px;
+    border-bottom: 4px solid;
+    border-color: transparent;
+    background-color: #F2F2F2;
+    min-width: 66px;
+    border-radius: 12px;
+}
