Some issue related to patient flow

--- a/src/assets/css/style_log.css
+++ b/src/assets/css/style_log.css
@@ -493,7 +493,7 @@ p.regOnlog {
 /* Added By ANKITA */
 
 .err_message {
-    text-align: center;
+    text-align: center !important;
     color: red;
     font-weight: 600;
 }
