Some Jira issues and optimization

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9789,6 +9789,10 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.addFlowIner, .addSpeclContnt {
+    height: 75vh;
+    overflow: auto;
+}
 .renameButton{
     background-color: #00ABAF !important;
     padding:12px;
