--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9327,6 +9327,24 @@ button.crdoLghtBlu2 {
     color: #8C00DB;
     background-color: #ECCAFF;
 }
+.darkTheme .newAddStepBtn button{
+    background-color: #404646;
+}   
+.newAddStepBtn button{
+    color: #7F8383;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 12px;
+    text-align: center;
+    font-family: Muli;
+    text-transform: initial;
+    border-radius: 8px;
+    background-color: #E5E6E6;
+    width: 100%;
+    padding: 14px 0px;
+    cursor: pointer !important;
+}
 .nwPatentAdd button {
     color: #7F8383;
     font-size: 12px;
@@ -9789,6 +9807,35 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.darkTheme .checkboxques {
+    background-color: #192020;
+}
+.stepTdotupper img{
+    padding: 3px;
+}
+.darkTheme a.srchSort {
+    border: #F2F2F2 1px solid;
+    background: transparent;
+}
+.darkTheme .allSpec div {
+    background-color: #192020 !important;
+    background: #192020 !important;
+    border: none;
+    height: initial !important;
+    min-height: initial !important;
+    color: #fafafa;
+}
+.darkTheme .allSpec .css-yk16xz-control {
+    background-color: #202323 !important;
+    border: 1px solid #7d7d7d !important;
+}
+.detailInfo1 {
+    padding: 12px;
+    margin: 45px 6px 0;
+}
+.officVisit img{
+    margin-left:15px;
+}
 .filtersec {
     color: #00abaf;
     font-weight: 700;
