worked on filter in virtualHospital

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17240,7 +17240,7 @@ ul.duringCovid li:last-child {
 }
 .filterApply {
     padding: 10px !important;
-    background: #00abaf !important;
+    background: #E1F7F7 !important;
 }
 
 .timeTask {
