resolve issue in patient flow

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -10144,7 +10144,8 @@ p.more-change-staff-img2 {
     margin-left: 14px;
 }
 .setSpcSpecList{
-    margin: 10px
+    margin: 10px;
+  
 }
 /* Start of Create a Task */
 .createTask {
