--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -12443,3 +12443,28 @@ input:-moz-autofill:active{
     min-width: 66px;
     border-radius: 12px;
 }
+
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 70px;
+    height: 100px;
+    width: 100px; 
+}
+
+.printPreviewText {
+    font-family: Muli;
+    font-size: 40px !important;
+    font-weight: 600;
+    letter-spacing: 10;
+}
+
+.printPreviewlink .relativeCSS {
+    display: none !important;
+}
+
+.nextPart{
+    text-align:center;
+}
